src/test/deca/context/invalid/Objet/redeclarationMethodSignature.deca
// Description:
//    test invalid redeclaration of method with different signatue
//
// Resultats:
//  The method is already defined in a super class but  with a diffrent signature
//
// Historique:
//    cree le 23/01/2022 

class A {
    void fct(int x){

    }

}
class B extends A {
     void fct(int x,float y){
     }
}



